A patch from Nicolas Malin "Price rounding, don't use UtilNumber.java for scale" (https://issues.apache.org/jira/browse/OFBIZ-1035).
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@541606 13f79535-47bb-0310-9956-ffa450edef68